fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -156,8 +156,9 @@ body {
   right: 0;
   position: absolute;
   z-index: -10;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
